#fix some query issues